# agentBench

./: .gitignore  science_agent_llm_evaluation_strategy.md
docs/: benchmark-datasets-report.html
docs/research/: 2026-07-12-benchmark-recon-synthesis.md  2026-07-12-benchmark-recon-verification.md
docs/runbooks/: parity.md
docs/superpowers/plans/: 2026-07-12-scieval-m1.md
docs/superpowers/specs/: 2026-07-12-scieval-platform-design.md
scieval/: README.md  pyproject.toml
scieval/configs/: budgets.yaml  models.yaml  profiles.yaml  scoring.yaml  suites.yaml
scieval/src/scieval/: config.py  paths.py
scieval/src/scieval/providers/: health.py  pricing.py  registry.py
scieval/src/scieval/reporting/: report.py
scieval/src/scieval/reporting/templates/: report.html.j2
scieval/src/scieval/runner/: cli.py  manifest.py  orchestrate.py
scieval/src/scieval/scoring/: aggregate.py  gates.py  normalize.py  parity.py
scieval/src/scieval/store/: results.py
scieval/src/scieval/tasks/: catalog.py  spec.py
scieval/tests/: test_catalog.py  test_cli.py  test_cli_e2e.py  test_config.py  test_health.py  test_manifest.py  test_orchestrate.py  test_parity.py  test_paths.py  test_pricing.py  test_registry.py  test_report.py  test_results.py  test_scoring.py  test_version.py
scieval/tests/fixtures/: toy.py
scieval/tests/fixtures/config/: budgets.yaml  models.yaml  profiles.yaml  scoring.yaml  suites.yaml
